--- a/style.css
+++ b/style.css
@@ -8,9 +8,7 @@ main {
     height: 100vh;
 }
 
-main>header {
-    height: 5vh;
-}
+main>header {}
 
 /* Navegação do Header */
 main>header>nav {
@@ -21,7 +19,7 @@ main>header>nav {
 
 /* Texto do Header "Minhas Tarefas" */
 main>header>nav>p {
-    font-size: 25px;
+    font-size: 1.5rem;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     font-weight: bold;
 }
@@ -107,11 +105,11 @@ main>section>section>.bar {
     background-image: linear-gradient(to bottom, #128c99, #16a4b4);
     display: flex;
     align-items: flex-end;
-    filter:blur(2px);
-    -o-filter:blur(2px);
-    -ms-filter:blur(2px);
-    -moz-filter:blur(2px);
-    -webkit-filter:blur(0px);
+    filter: blur(2px);
+    -o-filter: blur(2px);
+    -ms-filter: blur(2px);
+    -moz-filter: blur(2px);
+    -webkit-filter: blur(0px);
 }
 
 main>section>section>.bar>.items-bar {
@@ -169,12 +167,14 @@ main>section>section>.body>.addTask>input::-webkit-input-placeholder {
     color: seagreen;
 }
 
-.headerTasks{
+.headerTasks {
     padding: 2%;
     font-size: 20px;
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
     font-weight: bold;
     color: darkgreen;
+    display: grid;
+    grid-template-columns: 6fr 1fr;
 }
 
 main>section>section>.body>.lists {
@@ -182,7 +182,7 @@ main>section>section>.body>.lists {
     grid-template-columns: 1fr 1fr;
 }
 
-main>section>section>.body>.lists>.todo {    
+main>section>section>.body>.lists>.todo {
     height: 60vh;
     padding: 0 10% 0 10%;
 }
@@ -194,7 +194,7 @@ main>section>section>.body>.lists>.todo>.items {
 }
 
 *::-webkit-scrollbar {
-  width: .1px;
+    width: .1px;
 }
 
 main>section>section>.body>.lists>.todo>.items>.notItem {
@@ -227,7 +227,7 @@ main>section>section>.body>.lists>.todo>.items>ul>li:hover {
     box-shadow: .1px .1px 6px 2px seagreen;
 }
 
-main>section>section>.body>.lists>.todo>.items>ul>li>.checkTask{
+main>section>section>.body>.lists>.todo>.items>ul>li>.checkTask {
     display: flex;
     justify-content: center;
     align-items: center;
